nest-server/k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vis-production
  labels:
    environment: production
    app.kubernetes.io/name: vehicle-information-system
