nest-server/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: vis-api-gateway-service
  namespace: vis-production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: vis-api-gateway
